outputs/tsp_constructive-constructive/2025-09-19_23-18-06/evaluations/problem_eval2610162440135807642_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores, where distance is weighted by a time-decaying factor, node importance is based on a combination of degree centrality and locality, and a stochastic element is added to explore diverse paths.}
                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores, where distance is weighted by a time-decaying factor, node importance is based on a combination of degree centrality and locality, and a stochastic element is added to explore diverse paths.}
                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
